# assgen

./: .dockerignore  .gitignore  Makefile  PERSONAS.md  README.md  RELEASING.md  Taskfile.yml  compose.observability.yml  docker-compose.yml  mkdocs.yml  pyproject.toml  sonar-project.properties
.github/workflows/: ci.yml  docs.yml  release.yml
.tmuxinator/: assgen.yml
choco/: assgen.nuspec
choco/tools/: chocolateyinstall.ps1  chocolateyuninstall.ps1
demos/: 01_version.tape  02_task_tree.tape  03_models_catalog.tape  04_config.tape  05_server.tape  06_gen_procedural.tape  07_compose_pipeline.tape  08_jobs.tape  09_output_formats.tape  10_upgrade.tape  _settings.tape
dev/: 404.html  index.html  objects.inv  sitemap.xml
dev/api-reference/: index.html
dev/cli-reference/: index.html
dev/configuration/: index.html
dev/contributing/: index.html
dev/install/: index.html
dev/model-validation/: index.html
dev/quickstart/: index.html
dev/search/: search_index.json
dev/server-setup/: index.html
dev/ux-design/: index.html
docker/: Dockerfile.client  Dockerfile.server  Dockerfile.server-cuda  loki-local-config.yml  otel-collector-config.yml  prometheus.yml  tempo-local-config.yml
docker/grafana/dashboards/: assgen-sre.json
docker/grafana/provisioning/dashboards/: dashboards.yml
docker/grafana/provisioning/datasources/: datasources.yml
docs/: PYCHARM_SETUP.md  api-reference.md  cli-reference.md  compose-pipelines.md  configuration.md  contributing.md  gen_pages.py  index.md  install.md  model-validation.md  openapi.json  quickstart.md  server-setup.md  ux-design.md  workflow-audio-designer.md  workflow-character-artist.md  workflow-ci-pipeline.md  workflow-environment-artist.md  workflow-solo-indie.md
docs/design/: 20260411_120000_UTC_hf_spaces_feasibility.md  20260411_120100_UTC_hf_spaces_spec_tier1.md  20260411_120200_UTC_hf_spaces_spec_tier2_tier3.md  20260411_120300_UTC_repo_health_improvements.md  20260411_120400_UTC_hf_spaces_packaging_and_sdk.md  20260411_120500_UTC_hf_spaces_implementation_risks.md  20260411_130000_UTC_agent_briefing.md  20260411_131500_UTC_pycharm_run_configs.md  20260412_000000_UTC_hf_spaces_deployment_corrections.md  20260412_143626_UTC_hf_spaces_tier2_spec_corrections.md
docs/introspect/: 20260328_161334-UTC_CHECKPOINT.md
docs/stylesheets/: extra.css
pyinstaller/: assgen-client.spec
scripts/: export_openapi.py  generate_run_configs.py  record-demo.sh  smoke_test_inference.py  sync_spaces.py
spaces/_template/: README.md  app.py
spaces/assgen.animate.keyframe/: README.md  app.py
spaces/assgen.animate.mocap/: README.md  app.py
spaces/assgen.audio.ambient.generate/: README.md  app.py
spaces/assgen.audio.music.compose/: README.md  app.py
spaces/assgen.audio.music.loop/: README.md  app.py
spaces/assgen.audio.sfx.generate/: README.md  app.py
spaces/assgen.audio.voice.clone/: README.md  app.py
spaces/assgen.audio.voice.tts/: README.md  app.py
spaces/assgen.concept.generate/: README.md  app.py
spaces/assgen.concept.style/: README.md  app.py
spaces/assgen.model.create/: README.md  app.py
spaces/assgen.model.multiview/: README.md  app.py
spaces/assgen.model.splat/: README.md  app.py
spaces/assgen.narrative.dialogue.npc/: README.md  app.py
spaces/assgen.narrative.lore.generate/: README.md  app.py
spaces/assgen.narrative.quest.design/: README.md  app.py
spaces/assgen.procedural.terrain.heightmap/: README.md  app.py
spaces/assgen.rig.auto/: README.md  app.py
spaces/assgen.scene.depth.estimate/: README.md  app.py
spaces/assgen.scene.lighting.hdri/: README.md  app.py
spaces/assgen.texture.from_concept/: README.md  app.py
spaces/assgen.texture.generate/: README.md  app.py
spaces/assgen.texture.inpaint/: README.md  app.py
spaces/assgen.texture.upscale/: README.md  app.py
spaces/assgen.ui.icon/: README.md  app.py
src/assgen/: __init__.py  __main__.py  _version.py  catalog.py  catalog.yaml  config.py  db.py  sdk.py  version.py
src/assgen/client/: __init__.py  api.py  auto_server.py  cli.py  compose.py  context.py  output.py
src/assgen/client/commands/: client_cmd.py  compose.py  (+13 more)
src/assgen/server/: __init__.py  app.py  cli.py  logging_setup.py  model_manager.py  telemetry.py  validation.py  worker.py
tests/: test_api_routes.py  test_catalog.py  test_cli_smoke.py  test_compose_pipeline.py  test_db.py  test_hf_integration.py  test_tasks.py  test_validation.py  test_version.py
(+113 files in other folders)
